began creating the menu, need to finish the amending meds and amending allergies is broken.

--- a/Hospital_Sim_New.vcxproj
+++ b/Hospital_Sim_New.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Hospital_Sim_New.cpp" />
     <ClCompile Include="Patient.cpp" />
+    <ClCompile Include="menu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
