--- a/Hospital_Sim_New.vcxproj.filters
+++ b/Hospital_Sim_New.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Patient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Patient.h">
