--- a/Hospital_Sim_New.vcxproj
+++ b/Hospital_Sim_New.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="File.cpp" />
     <ClCompile Include="Hospital_Sim_New.cpp" />
     <ClCompile Include="Patient.cpp" />
     <ClCompile Include="menu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="File.h" />
     <ClInclude Include="Header.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="Patient.h" />
