--- a/Hospital_Sim_New.vcxproj.filters
+++ b/Hospital_Sim_New.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="File.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GenerateDataBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Patient.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="File.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GenerateDataBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
